# Corewar

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: asm.h  asm_errors.h  op.h  op_struct.h  vm.h  vm_exec.h  vm_struct.h
libft/: Makefile
libft/inc/: bitwise.h  conv.h  error.h  ft_printf.h  hash_map.h  io_.h  list.h  logger.h  math.h  mem.h  predicates.h  str.h  system.h  util.h
libft/src/bitwise/: hasbyte.c  mask.c  operations.c  shift.c
libft/src/conv/: ft_uitoa_dec.c  ft_uitoa_hex.c  ft_ultoa_base.c  ft_ultoa_hex.c
libft/src/hash_map/: hash_map_destroy.c  hash_map_iterate.c  hash_map_new.c
libft/src/io/: get_next_line.c
libft/src/io/ft_printf/: buffered_printer.c  float_processing.c  float_processing_ag.c  float_processing_ef.c  float_processing_fast_dtoa.c  float_processing_fast_ldtoa.c  float_processing_fxd_dbl.c  ft_printf_.c  ft_printf_.h  ft_printf_alias.c  ft_printf_const_data.h  ft_printf_utils.c  get_format_arg.c  number_processing.c  string_processing.c
libft/src/list/: list_new.c  list_pop.c
libft/src/logger/: logger.c  logger_.h  logger_appenders.c  logger_config.c  logger_log.c  logger_log_alias.c
libft/src/math/: abs.c  divmod.c  max.c  min.c  moddiv.c  numlen.c  pow.c  sqrt.c
libft/src/mem/: memchr.c  memcmp.c  memcpy.c  memmem.c  memset.c  memswap.c
libft/src/predicates/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c
libft/src/string/: ft_concat.c  ft_isint.c  ft_strany.c  ft_strend.c  ft_strlen.c  ft_strnequ.c  ft_strrev.c  ft_strstart.c  ft_strtrim.c  ft_wstrlen.c  strbuilder_.h
libft/src/system/: byte_swap_signed.c  byte_swap_unsigned.c  endian.c  ft_path.c
libft/src/util/: ft_assert.c  ft_exit.c
source/assembler/: asm.c  asm_run.c  big_endian_realisation.c  free.c  parse.c  parse_clear_line.c  parse_mark.c  parse_name_comment.c  parse_operation.c  translation_bytecode.c  util.c
source/op/: op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  util.c
source/vm/: vm_champion_load.c  vm_champion_read.c  vm_check.c  vm_cursor.c  vm_exec.c  vm_memory_access.c  vm_options.c  vm_options_logger.c  vm_print.c  vm_run.c  vm_verbose.c
valid/: no_space_between_op_and_param.s
